--- a/press/index.html
+++ b/press/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Meatballs — Press</title>
-  <meta name="description" content="Meatballs is not a recipe app. It is a calm, editorial reference library from kitchens around the world." />
+  <meta name="description" content="Meatballs is not a recipe app. A calm, editorial reference library from kitchens around the world." />
 
   <style>
     :root{
@@ -12,6 +12,8 @@
       --ink:#151515;
       --muted:#5b5b5b;
       --hair:#d8d0c2;
+      --wash:rgba(255,255,255,.16);
+
       --max:1180px;
       --col:66ch;
       --side:30ch;
@@ -30,6 +32,7 @@
     }
     a{color:inherit; text-decoration-thickness:1px; text-underline-offset:3px}
     a:hover{opacity:.85}
+    ::selection{background:rgba(21,21,21,.14)}
 
     .wrap{
       max-width:var(--max);
@@ -48,6 +51,18 @@
       font: 600 12px/1.2 var(--sans);
       letter-spacing:.14em;
       text-transform:uppercase;
+    }
+    .masthead .right{
+      display:flex;
+      flex-wrap:wrap;
+      gap:10px 14px;
+      justify-content:flex-end;
+    }
+    .chip{
+      padding:6px 10px;
+      border:1px solid var(--hair);
+      border-radius:999px;
+      background:var(--wash);
     }
 
     header{
@@ -76,7 +91,7 @@
       border-radius:16px;
       border:1px solid var(--hair);
       overflow:hidden;
-      background:rgba(255,255,255,.22);
+      background:var(--wash);
       flex:0 0 auto;
     }
     .icon img{
@@ -117,7 +132,7 @@
     .contents a{color:var(--muted)}
     .dot{opacity:.55}
 
-    /* Grid */
+    /* Main grid */
     .grid{
       display:grid;
       grid-template-columns: 1fr;
@@ -179,11 +194,11 @@
       color:var(--muted);
     }
 
-    /* Sidebar cards */
+    /* Cards */
     .card{
       border:1px solid var(--hair);
       border-radius:14px;
-      background:rgba(255,255,255,.16);
+      background:var(--wash);
       padding:14px;
       margin-bottom:14px;
     }
@@ -213,6 +228,21 @@
     .small{
       font: 400 13px/1.6 var(--sans);
       color:var(--muted);
+    }
+
+    /* Split card: numbers + screenshots side-by-side */
+    .card-split{
+      display:grid;
+      grid-template-columns: 1fr;
+      gap:16px;
+    }
+    @media (min-width: 980px){
+      .card-split{
+        grid-template-columns: 1fr 1fr;
+        align-items:start;
+      }
+      .facts-col{padding-right:6px}
+      .shots-col{padding-left:6px}
     }
 
     /* Sidebar screenshots (small, editorial) */
@@ -245,6 +275,7 @@
     }
     .shot-meta a{color:var(--muted)}
 
+    /* Sections below */
     .section{
       padding:34px 0;
       border-top:1px solid var(--hair);
@@ -257,6 +288,18 @@
       margin:0 0 14px;
     }
 
+    .links{
+      display:flex;
+      flex-wrap:wrap;
+      gap:10px 14px;
+      margin-top:10px;
+      font: 600 12px/1.2 var(--sans);
+      letter-spacing:.14em;
+      text-transform:uppercase;
+      color:var(--muted);
+    }
+    .links a{color:var(--muted)}
+
     footer{
       border-top:1px solid var(--hair);
       margin-top:34px;
@@ -268,14 +311,27 @@
       color:var(--muted);
       font: 400 12px/1.6 var(--sans);
     }
+
+    /* Small accessibility improvement */
+    .sr-only{
+      position:absolute;
+      width:1px;height:1px;
+      padding:0;margin:-1px;
+      overflow:hidden;clip:rect(0,0,0,0);
+      white-space:nowrap;border:0;
+    }
   </style>
 </head>
 
 <body>
   <div class="wrap">
-    <div class="masthead">
+    <div class="masthead" aria-label="Masthead">
       <div>Meatballs — Press</div>
-      <div id="updated">Updated —</div>
+      <div class="right">
+        <span class="chip">meatballs.app</span>
+        <span class="chip" id="updated">Updated —</span>
+        <span class="chip">Stockholm</span>
+      </div>
     </div>
 
     <header>
@@ -300,18 +356,18 @@
         <em>as culture, not content.</em>
       </div>
 
-      <div class="contents" aria-label="Contents">
+      <nav class="contents" aria-label="Contents">
         <a href="#overview">Overview</a><span class="dot">·</span>
         <a href="#story">The story</a><span class="dot">·</span>
         <a href="#resources">Resources</a><span class="dot">·</span>
         <a href="#privacy">Privacy</a><span class="dot">·</span>
         <a href="#support">Support</a>
-      </div>
+      </nav>
     </header>
 
-    <main class="grid">
-      <!-- LEFT: editorial text -->
-      <section class="prose" aria-label="Press overview">
+    <main class="grid" aria-label="Main content">
+      <!-- LEFT: editorial copy -->
+      <section class="prose" aria-label="Overview">
         <span id="overview" aria-hidden="true"></span>
         <h2>Overview</h2>
         <p>
@@ -323,7 +379,7 @@
           where it belongs, and what it means before method.
         </p>
 
-        <div class="pull" aria-label="Pullquote">
+        <div class="pull" aria-label="Pull quote">
           <blockquote>
             Food apps have become content factories. We wanted the opposite — a book that happens to be an app.
           </blockquote>
@@ -340,55 +396,64 @@
           Meatballs is an independent project based in Stockholm, built as a long-term reference library rather than a trend-driven feed.
         </p>
 
-        <h2>Links</h2>
-        <p class="small" style="margin-top:-6px">
-          Keep this simple. If you don’t have the App Store URL yet, leave it out until launch.
-        </p>
+        <h2>Contact</h2>
         <p>
-          <a href="#" target="_blank" rel="noopener">View on the App Store</a><br/>
-          <a href="#resources">Press kit & assets</a><br/>
-          <a href="mailto:press@meatballs.app">press@meatballs.app</a>
+          Press: <a href="mailto:press@meatballs.app">press@meatballs.app</a><br/>
+          Support: <a href="mailto:support@meatballs.app">support@meatballs.app</a>
+        </p>
+
+        <div class="links" aria-label="Primary links">
+          <!-- Replace the # with your App Store URL once you have it. Keep it text-only. -->
+          <a href="#" target="_blank" rel="noopener">View on the App Store</a>
+          <a href="#resources">Press kit</a>
+        </div>
+
+        <p class="small" style="margin-top:14px">
+          Note: This page is intentionally restrained. If you need a quote, assets, or context beyond what’s here, email and you’ll get a direct reply.
         </p>
       </section>
 
-      <!-- RIGHT: facts + small screenshots -->
-      <aside aria-label="Facts and resources">
+      <!-- RIGHT: facts + screenshots in one split block -->
+      <aside aria-label="Facts and assets">
         <div class="card">
-          <h3>By the numbers</h3>
-          <dl>
-            <dt>Entries</dt><dd>47</dd>
-            <dt>Countries</dt><dd>32</dd>
-            <dt>Accounts</dt><dd>None</dd>
-            <dt>Tracking</dt><dd>None</dd>
-            <dt>Price</dt><dd>Free</dd>
-          </dl>
-          <p class="small" style="margin:12px 0 0">
-            Update these whenever you add content — journalists cite this.
-          </p>
-        </div>
+          <div class="card-split" aria-label="By the numbers and screenshots">
+            <div class="facts-col">
+              <h3>By the numbers</h3>
+              <dl>
+                <dt>Entries</dt><dd>47</dd>
+                <dt>Countries</dt><dd>32</dd>
+                <dt>Accounts</dt><dd>None</dd>
+                <dt>Tracking</dt><dd>None</dd>
+                <dt>Price</dt><dd>Free</dd>
+              </dl>
+              <p class="small" style="margin:12px 0 0">
+                Update these whenever you add content — editors cite this.
+              </p>
+            </div>
 
-        <div class="card">
-          <h3>Screenshots</h3>
-          <div class="shots">
-            <!-- Click-to-expand thumbnails (small, in the sidebar) -->
-            <a class="shot" href="/assets/screenshot-1.png" target="_blank" rel="noopener">
-              <img src="/assets/screenshot-1.png" alt="Meatballs screenshot 1" />
-            </a>
+            <div class="shots-col">
+              <h3>Screens</h3>
+              <div class="shots">
+                <a class="shot" href="/assets/screenshot-1.png" target="_blank" rel="noopener">
+                  <img src="/assets/screenshot-1.png" alt="Meatballs screenshot 1" />
+                </a>
 
-            <!-- Optional second screenshot: remove this <a> if you only want one -->
-            <a class="shot" href="/assets/screenshot-2.png" target="_blank" rel="noopener">
-              <img src="/assets/screenshot-2.png" alt="Meatballs screenshot 2" />
-            </a>
+                <!-- Optional second screenshot: remove this block if you only want one -->
+                <a class="shot" href="/assets/screenshot-2.png" target="_blank" rel="noopener">
+                  <img src="/assets/screenshot-2.png" alt="Meatballs screenshot 2" />
+                </a>
+              </div>
+
+              <div class="shot-meta">
+                <a href="/assets/screenshot-1.png" target="_blank" rel="noopener">Open</a>
+                <a href="/assets/meatballs-press-kit.zip">Press kit</a>
+              </div>
+
+              <p class="small" style="margin:10px 0 0">
+                Thumbnails are intentionally small. Click to view full size.
+              </p>
+            </div>
           </div>
-
-          <div class="shot-meta">
-            <a href="/assets/screenshot-1.png" target="_blank" rel="noopener">Open</a>
-            <a href="/assets/meatballs-press-kit.zip">Press kit</a>
-          </div>
-
-          <p class="small" style="margin:10px 0 0">
-            Thumbnails are intentionally small. Click to view full size.
-          </p>
         </div>
 
         <span id="resources" aria-hidden="true"></span>
@@ -408,14 +473,14 @@
             </dd>
           </dl>
           <p class="small" style="margin:12px 0 0">
-            Keep assets in <code>/assets</code> so URLs stay stable for editors.
+            Keep assets under <code>/assets</code> so URLs stay stable for editors.
           </p>
         </div>
 
         <div class="card">
-          <h3>Notes</h3>
+          <h3>One sentence</h3>
           <p class="small" style="margin:0">
-            This page is intentionally restrained: useful, skimmable, quotable.
+            Meatballs is a calm, editorial iOS reference library about one dish — explored through culture, not trends.
           </p>
         </div>
       </aside>
@@ -455,6 +520,7 @@
         <a href="#privacy">Privacy</a> ·
         <a href="#support">Support</a>
       </div>
+
       <script>
         const d = new Date();
         document.getElementById('y').textContent = d.getFullYear();
